added additional cors settings